--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,12 @@
             <div class="card text-center shadow-sm h-100" data-bs-toggle="modal" data-bs-target="#modalPostes">
                 <div class="card-body">
                     <div class="mb-3">
-                        <i class="fas fa-vote-yea fa-3x text-success"></i>
+                        {% if phase == 2%}
+                        <i class="fas fa-vote-yea  fa-3x text-success"></i>
+                        {% else %}
+                        <i class="fas fa-info-circle fa-3x text-success"></i>
+
+                        {% endif %}
                     </div>
                     {% if phase == 2 %}
                     <h4 class="card-title">Voter</h4>
