--- a/templates/delete_candidature.html
+++ b/templates/delete_candidature.html
@@ -3,7 +3,7 @@
 {% block title %}Supprimer une candidature - Élections du Club{% endblock %}
 
 {% block content %}
-<h2>Poser sa candidature</h2>
+<h2>Supprimer une candidature</h2>
 <!-- TODO: Modifier ce formulaire pour le mettre dans un cadre de largeur fixe t le centrer -->
 <form method="POST" action="{{ url_for('templates.delete_candidature') }}" enctype="multipart/form-data"
     class="jumbotron">
